/*
 * $Id: ChangeLog,v 1.1806 2003/12/01 20:06:14 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-12-01 15:01 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/arrays.c
    + Added support for searching for array value in aSacn() but *only* in xHarbour extended mode
      ( when optional 5th paramater <lForceExact> is .T.)

  /*
     I'm realy puzzled that Clipper aScan() can NOT find an Array (without a search block) even
     when EXACT is ON, because <Target[n] == aSearch> is a perfectly valid expression.

     I did NOT fix it at this time for ?compabtibility? reasons - but I'd like your input
     since this really through me off, I'd expect it it work in Clipper.
  */

2003-12-01 12:03 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/runner.c
    * Modified prgFunction template to also push Globals.

  * tests/pp.prg
  * tests/pp_harb.ch
    * Removed PP_ExecProcID(), and optimized PP_GenDynProcedure() to call PP_ExecProcedure() directly.
    * Minor corrections.

2003-11-30 21:55 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/vm/runner.c
    * Removed static from hb_hrbAsmCreateFun

  * tests/pp.prg
  * tests/pp_harb.ch
    + Added dynmic function generation so that error handling is no longer needed to resolve script level functions.
      /* Interpreter is now many times faster. (can someone test if it works correctly under Linux?) */

2003-11-30 19:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/tip/makefile.bc
    - Removed tiputil.prg

  * contrib/tip/tiputils.c
  * source/rdd/dbcmd.c
    * MSVC compilaton

2003-11-30 18:36 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * tests/pp.prg
   * tests/pp_harb.ch
     * Replaced all Alert()s on erros with code to raise errors.
     * Restructured code to catch and forward errors.
     * Many optimizations
